# flashpoint-network

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  howtobuild.md  projectdetails.md  requirements.txt  spec.md
.github/workflows/: rust-server-ci.yml
benchmarks/: bench_build_block.py
docs/: cosmos_adapter_plan.md
examples/: seed_and_compare.py
mempool/: __init__.py  app.py  generate_golden.py
mempool/static/: app.js  index.html  style.css
monitoring/: otel-collector.yaml  prometheus.yml
monitoring/grafana/dashboards/: fpn_server_observability.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/scripts/: ws_lag_demo.sh
rust/engine/: Cargo.toml
rust/engine/src/: lib.rs
rust/server/: Cargo.toml  build.rs
rust/server/benches/: auction_book.rs  auction_clear.rs  build_block.rs  build_block_param.rs  fairness.rs  intent_insert.rs  intent_insert_param.rs
rust/server/examples/: loader.rs
rust/server/proto/: fpn.proto
rust/server/src/: main.rs
rust/server/tests/: abci_conformance.rs  abci_shim_integration.rs  mev_auction.rs  scheduler.rs  zk_ark.rs  zk_async.rs
rust/server/tests/golden/: conflict_build_block_greedy_0.1.json  conflict_intents.json  simple_build_block_greedy_0.1.json  simple_intents.json
sd k/: __init__.py
sdk/: __init__.py
sdk/python/: __init__.py  client.py
sim/: __init__.py  algorithms.py  cli.py  engine.py  generator.py  models.py
tests/: conftest.py  test_algorithms.py  test_api.py  test_economics.py  test_engine_accel.py  test_sdk.py  test_ui.py
zk/: README.md
